@@ -18,7 +18,9 @@ package se.isselab.HAnS.featureLocation;
 
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.editor.Document;
+import com.intellij.openapi.project.DumbService;
 import com.intellij.openapi.project.Project;
+import com.intellij.psi.search.GlobalSearchScope;
 import com.intellij.psi.search.searches.ReferencesSearch;
 import com.intellij.util.Query;
 import groovy.util.logging.Slf4j;
@@ -27,21 +29,24 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import se.isselab.HAnS.FeatureAnnotationSearchScope;
 import se.isselab.HAnS.codeAnnotation.psi.*;
+import org.jetbrains.annotations.NotNull;
+import se.isselab.HAnS.featureAnnotation.codeAnnotation.psi.*;
 import se.isselab.HAnS.featureModel.FeatureModelUtil;
 import se.isselab.HAnS.featureModel.psi.FeatureModelFeature;
 
 
 import com.intellij.psi.*;
 import com.intellij.psi.util.PsiTreeUtil;
-import se.isselab.HAnS.fileAnnotation.psi.FileAnnotationFile;
-import se.isselab.HAnS.fileAnnotation.psi.FileAnnotationFileAnnotation;
-import se.isselab.HAnS.fileAnnotation.psi.FileAnnotationFileReferences;
-import se.isselab.HAnS.folderAnnotation.psi.FolderAnnotationFile;
+import se.isselab.HAnS.featureAnnotation.fileAnnotation.psi.FileAnnotationFile;
+import se.isselab.HAnS.featureAnnotation.fileAnnotation.psi.FileAnnotationFileAnnotation;
+import se.isselab.HAnS.featureAnnotation.fileAnnotation.psi.FileAnnotationFileReferences;
+import se.isselab.HAnS.featureAnnotation.folderAnnotation.psi.FolderAnnotationFile;
 import se.isselab.HAnS.referencing.FileReferenceUtil;
 
 import java.util.HashMap;
-import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.List;
+import java.util.Map;
 
 @Slf4j
 public class FeatureLocationManager {
@@ -63,9 +68,13 @@ public class FeatureLocationManager {
      * @return Map of all FeatureFileMappings for the given project
      * @see FeatureFileMapping
      */
-    public static HashMap<String, FeatureFileMapping> getAllFeatureFileMappings(Project project) {
+    public static Map<String, FeatureFileMapping> getAllFeatureFileMappings(Project project) {
         if(!wasAllInitialized) {
             calculateAllFeatureFileMappings(project);
+          
+        HashMap<String, FeatureFileMapping> mapping = new HashMap<>();
+        for (var feature : ReadAction.compute(() -> FeatureModelUtil.findFeatures(project))) {
+            mapping.put(ReadAction.compute(feature::getLPQText), FeatureLocationManager.getFeatureFileMapping(project, feature));
         }
         return new HashMap<>(CACHE);
     }
@@ -99,23 +108,28 @@ public class FeatureLocationManager {
     public static void calculateFeatureFileMapping(Project project, FeatureModelFeature feature) {
         log.atDebug().log("Calculating feature file mapping for feature: " + feature.getLPQText());
         FeatureFileMapping featureFileMapping = new FeatureFileMapping(feature);
-        Query<PsiReference> featureReference = ReferencesSearch.search(feature, FeatureAnnotationSearchScope.projectScope(project), true);
-        for (PsiReference reference : ReadAction.compute(() -> featureReference)) {
-            //get comment sibling of the feature comment
+        List<PsiReference> references = DumbService.getInstance(project).tryRunReadActionInSmartMode(() ->
+                ReferencesSearch.search(feature, GlobalSearchScope.projectScope(project), true)
+                        .findAll().stream().toList(), ""
+        );
+        if (references == null) return featureFileMapping;
 
+        for (PsiReference reference : references) {
             PsiElement element = reference.getElement();
-            var originatingFilePath = ReadAction.compute(() -> element.getContainingFile().getVirtualFile().getPath());
-            //determine file type and process content
-            var fileType = ReadAction.compute(element::getContainingFile);
+            String originatingFilePath = ReadAction.compute(() ->
+                    element.getContainingFile().getVirtualFile().getPath()
+            );
+            PsiFile fileType = ReadAction.compute(element::getContainingFile);
+
             if (fileType instanceof CodeAnnotationFile) {
                 processCodeFile(project, featureFileMapping, element, originatingFilePath);
             } else if (fileType instanceof FileAnnotationFile) {
                 processFeatureToFile(project, featureFileMapping, element, originatingFilePath);
             } else if (fileType instanceof FolderAnnotationFile) {
                 PsiDirectory dir = ReadAction.compute(fileType::getContainingDirectory);
-                if (dir == null)
-                    continue;
-                processFeatureToFolder(project, featureFileMapping, dir, originatingFilePath);
+                if (dir != null) {
+                    processFeatureToFolder(project, featureFileMapping, dir, originatingFilePath);
+                }
             }
         }
         featureFileMapping.buildFromQueue();
@@ -186,7 +200,7 @@ public class FeatureLocationManager {
                 var fileName = ReadAction.compute(() -> FileReferenceUtil.findFile(file, file.getFileName().getText()));
                 if (fileName.isEmpty())
                     continue;
-                var psiFile = fileName.get(0);
+                var psiFile = fileName.getFirst();
 
                 Document document = ReadAction.compute(() -> psiDocumentManager.getDocument(psiFile));
                 if (document == null)
